# epistemic-steering

./: .gitignore  README.md  extraction_summary.json  main.py  pyproject.toml
docs/: generation_time_probe_v3.md
paper/: paper.tex  references.bib
results/: d3_gate_results.json  hewitt_liang_controls.json  hewitt_liang_controls_real.json  hewitt_liang_controls_real.md  humaneval_pilot_report.md  humaneval_signal_ensemble_comparison.json  task-10-baseline.json  task-11-stacey.json  task-12-best-signal.json  task-13-hybrid.json  task-14-lvu.json  task-15-correlation.json  task-16-ensemble.json  transfer_matrix.json  transfer_matrix_AUROC_Platt.csv  transfer_matrix_AUROC_raw.csv  transfer_matrix_Brier.csv  transfer_matrix_ECE.csv
scripts/: _debug.py  _diagnose.py  analyze_transfer_matrix.py  benchmark_prompts.py  brier_loss_train.py  build_transfer_matrix.py  calibration_audit.py  combined_modal_extraction.py  compare_methods.py  conformal_prediction.py  cross_benchmark_eval.py  cross_domain_analysis.py  debug_qs.py  demo_steering.py  download_gen_time_data.py  ensemble_probe.py  evaluate_baseline_cot.py  evaluate_baseline_direct.py  evaluate_baseline_random.py  evaluate_heldout.py  extract_benchmark_activations.py  extract_gen_time_data.py  extract_gen_time_gsm8k_layer25.py  extract_multilayer_humaneval.py  feature_augmentation.py  format_results.py  gen_time_extract_qwen_prompting.py  gen_time_qwen_prompting.py  generate_figures.py  hewitt_liang_controls.py  hewitt_liang_controls_real.py  layer_sweep_baseline.py  posthoc_calibration.py  re_extract_benchmarks.py  (+15 more)
(+46 files in other folders)
