[project]
name = "epistemic-steering"
version = "0.1.0"
description = "Probe-based LLM steering for hallucination prevention"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "modal>=1.4.2",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
]
